# RDJ

./: .env.example  .gcloudignore  .gitignore  CALENDAR.md  DEPLOYMENT_ARCHITECTURE.md  Dockerfile  Dockerfile.jobs  README.md  deploy.sh  pyproject.toml  run-brain-api.sh
deploy/: cloudbuild-jobs.yaml  crontab
docs/: BRAIN_V2_INTEGRATION_BLUEPRINT.md  COVA_BRIDGE_DATA_REQUIREMENTS.md
scripts/: create_aoc_database.py  setup_mood_cron.sh  setup_scheduler.sh
src/aoc_analytics/: __init__.py
src/aoc_analytics/api/: __init__.py  jfk_endpoints.py  server.py
src/aoc_analytics/brain/: __init__.py  agent.py  backtesting.py  brain_daemon.py  cross_store.py  curiosity_engine.py  daemon.py  event_correlation.py  grade_diagnostic.py  hypothesis.py  hypothesis_tests.py  inventory_recommendations.py  learner.py  llm_provider.py  llm_synthesis.py  memory.py  monthly_seasonality.py  notifications.py  predictive_calendar.py  product_weather.py  reddit_events.py  roi_tracker.py  signal_integration.py  signal_magnitude.py  simulation_report.py  store_simulation.py  time_of_day.py  verify_roi.py  weather_api.py  weather_signal.py
src/aoc_analytics/brain/data/: backtest_results.json  category_weather_impacts.json  cross_store_analysis.json  event_impact_analysis.json  inventory_recommendations.json  last_run.json  learned_signal_magnitudes.json  predictive_calendar.json  reddit_events.json  (+5 more)
src/aoc_analytics/client/: __init__.py
src/aoc_analytics/core/: __init__.py  adaptive_weights.py  anomaly_registry.py  backtesting.py  calendar.py  conditions.py  db_adapter.py  decision_router.py  decomposed_forecast.py  forecast_engine.py  hero_signals.py  predictor.py  predictor_fast.py  recommender.py  store_profiles.py  weather.py
src/aoc_analytics/integrations/: __init__.py  jfk_bridge.py  test_brain_jfk.py
src/aoc_analytics/jobs/: __init__.py  scheduler.py
src/aoc_analytics/llm/: __init__.py  chat.py  client.py  events.py  explainer.py  integration.py  rag.py  reddit.py
src/aoc_analytics/scripts/: __init__.py  backfill_sales.py  backfill_weather.py  collect_mood.py  customer_profiles.py  forecast.py  llm_demo.py  outlier_customers.py  pattern_alerts.py  tune_weights.py  vibe_preview.py
(+18 files in other folders)
